Added schedule pdf for subjects