@@ -18,17 +18,18 @@ public class DebugHelper implements Serializable {
             process.waitFor();
         } catch (IOException e) {
             try {
-                process = Runtime.getRuntime().exec(new String{}["/bin/bash", "-c", "git rev-parse --abbrev-ref HEAD"]);
+                process = Runtime.getRuntime().exec(new String[]{"/bin/bash", "-c", "git rev-parse --abbrev-ref HEAD"});
                 process.waitFor();
-            } catch (IOException e) {
-                e.printStackTrace();
+            } catch (IOException ex2) {
+                ex2.printStackTrace();
                 return "Unknown(error)";
-            } catch (InterruptedException e) {
-                e.printStackTrace();
+            } catch (InterruptedException ex3) {
+                ex3.printStackTrace();
                 return "Unknown(interrupted)";
             }
+        } catch (InterruptedException ex) {
+            throw new RuntimeException(ex);
         }
-    }
 
         try (BufferedReader reader = new BufferedReader(
                 new InputStreamReader(process.getInputStream()))) {
